# DeepMimic

./: .gitattributes  .gitignore  .gitmodules  DeepMimic.py  DeepMimic.pyproj  README.md  casa_pipila_04_tposeInitialToBulletSimRoot81cmUp_13.abc  casa_pipila_04_tposeInitialToBulletSimRoot8komma1mm_13.abc  casa_pipila_07_rotRegularMattressOnlyTrianguatedZeroedTransRot_01.abc  casa_pipila_07_rotRegularMattressOnlyTrianguated_01.abc  casa_pipila_07_rotRegularRoomOnlyTrianguated_01.abc  casa_rig_04_06_backflip_50_take_001.abc  casa_rig_04_09_backflip_1850_take_001.abc  casa_rig_04_12_backflip_1850_take_001.abc  casa_rig_04_12_backflip_2400_take_001_character.abc  casa_rig_04_12_backflip_2400_take_001_mattress.abc  casa_rig_04_12_backflip_2400_take_001_rigid_world.abc  casa_rig_04_12_backflip_2400_take_001_rigid_world_noStatic.abc  casa_rig_04_12_backflip_2400_take_002_character.abc  casa_rig_04_12_backflip_2400_take_002_mattress.abc  casa_rig_04_13_backflip_50_take_001_character.abc  casa_rig_04_13_backflip_50_take_001_mattress.abc  casa_rig_04_13_backflip_50_take_002_character.abc  casa_rig_04_13_backflip_50_take_002_mattress.abc  casa_rig_04_13_lie_150_take_001.abc  character.abc  compare.blend  jardin_rig_02_02_backflip_1850_take_001.abc  mattress.abc  mattress_05_mattressShapeExport_mattress.abc  mattress_07_1x1x2mattressShapeExport_export.abc  mattress_07_1x1x2mattressShapeExport_exportMittig.abc  mattress_07_1x1x2mattressShapeExport_matress.abc  requirements.txt  rigid_world.abc  test_cube_simple1.abc  test_cube_simple2-100.abc  test_cube_simple2-1000.abc  test_cube_simple2-400.abc  test_cube_simple2.abc  (+2 more)
Convert/: CMakeLists.txt  convert.bat  main.cpp  simulate.bat
DeepMimicCore/: DeepMimicCore.cpp  DeepMimicCore.h  DeepMimicCore.vcxproj  DeepMimicCore.vcxproj.filters  Makefile
args/: convert_motion.txt  convert_motion_view.txt  run_casa_reduced.txt  run_casa_rig_04_05_backflip_args.txt  run_casa_rig_04_06_backflip_args.txt  run_casa_rig_04_09_backflip_args.txt  run_casa_rig_04_12_backflip_t001_args.txt  run_casa_rig_04_12_backflip_t002_args.txt  run_casa_rig_04_12_backflip_t002_noStatic_args.txt  run_casa_rig_04_13_backflip_t001_args.txt  run_casa_rig_04_13_backflip_t002_args.txt  run_casa_rig_04_13_lie_args.txt  run_jardin_rig_02_02_backflip_args.txt  run_lieForAlembicExport_481frames_02.txt  run_mattress_humanoid3d_backflip_args.txt  run_sitIdleForAlembicExport_481frames_02.txt  run_sitUpForAlembicExport_481frames_02.txt  run_viborg_rig_nd_13_c_backflip_args.txt  test_cube_rots.txt  (+11 more)
(+98 files in other folders)
